Implement a Varnish plugin reporting basic client and cache stats

--- a/etc/newrelic/newrelic_plugin_agent.cfg
+++ b/etc/newrelic/newrelic_plugin_agent.cfg
@@ -150,6 +150,10 @@ Application:
   #  verify_ssl_cert: true
   #  port: 8098
 
+  #varnish:
+  #  name: localhost
+  #  bin: /usr/bin/varnishstat
+
   #uwsgi:
   #  name: localhost
   #  host: localhost
